--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@flexiblepersistence/backnextapi",
   "productName": "backNextApi",
   "author": "Judah Holanda Correia Lima <judahholanda7@gmail.com> (https://judahh.com)",
-  "version": "0.1.3",
+  "version": "0.1.0",
   "private": false,
   "description": "A simple API framework using Flexible Persistence",
   "main": "dist/source/index.js",
@@ -34,6 +34,7 @@
     "path_server": "source/server"
   },
   "scripts": {
+    "dev": "next",
     "postinstall": "",
     "prepublish": "",
     "build": "rm -rf dist/ && tsc",
@@ -45,19 +46,22 @@
     "tsc:w": "tsc -w"
   },
   "dependencies": {
-    "@flexiblepersistence/service": "latest",
-    "@flexiblepersistence/sequelize": "latest",
     "@flexiblepersistence/dao": "latest",
+    "@flexiblepersistence/sequelize": "latest",
+    "@flexiblepersistence/service": "latest",
     "cors": "latest",
-    "express": "latest",
     "flexiblepersistence": "latest",
     "journaly": "latest",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "swr": "latest",
     "ts-mixer": "latest"
   },
   "devDependencies": {
-    "@types/express": "latest",
     "@types/jest": "latest",
     "@types/node": "latest",
+    "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint": "latest",
