--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,6 +65,17 @@
     "emitDecoratorMetadata": true, // Enables experimental support for emitting type metadata for decorators.
     // Advanced Options
     "forceConsistentCasingInFileNames": true // Disallow inconsistently-cased references to the same file.
+    ,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
   },
   "include": [
     "../api//",
