--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@flexiblepersistence/backnextapi",
   "productName": "backNextApi",
   "author": "Judah Holanda Correia Lima <judahholanda7@gmail.com> (https://judahh.com)",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": false,
   "description": "A simple API framework using Flexible Persistence",
   "main": "dist/source/index.js",
@@ -50,6 +50,7 @@
     "@flexiblepersistence/dao": "latest",
     "@flexiblepersistence/sequelize": "latest",
     "@flexiblepersistence/service": "latest",
+    "pg": "latest",
     "cors": "latest",
     "flexiblepersistence": "latest",
     "journaly": "latest",
@@ -62,7 +63,7 @@
   "devDependencies": {
     "@types/jest": "latest",
     "@types/node": "latest",
-    "@types/react": "^17.0.0",
+    "@types/react": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint": "latest",
