--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@backapirest/next",
   "productName": "backAPIRestNext",
   "author": "Judah Holanda Correia Lima <judahholanda7@gmail.com> (https://judahh.com)",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "description": "A simple API framework using Flexible Persistence",
   "main": "dist/source/index.js",
@@ -48,9 +48,7 @@
   },
   "dependencies": {
     "backapirest": "latest",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "latest"
   },
   "devDependencies": {
     "@types/jest": "latest",
