--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@backapirest/next",
   "productName": "backAPIRestNext",
   "author": "Judah Holanda Correia Lima <judahholanda7@gmail.com> (https://judahh.com)",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "description": "A simple API framework using Flexible Persistence",
   "main": "dist/source/index.js",
@@ -47,6 +47,7 @@
     "tsc:w": "tsc -w"
   },
   "dependencies": {
+    "journaly": "latest",
     "backapirest": "latest",
     "next": "latest"
   },
