--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@backapirest/next",
   "productName": "backAPIRestNext",
   "author": "Judah Holanda Correia Lima <judahholanda7@gmail.com> (https://judahh.com)",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": false,
   "description": "A simple API framework using Flexible Persistence",
   "main": "dist/source/index.js",
@@ -47,10 +47,11 @@
     "tsc:w": "tsc -w"
   },
   "dependencies": {
-    "journaly": "latest",
     "backapi": "latest",
     "backapirest": "latest",
-    "next": "latest"
+    "journaly": "latest",
+    "next": "latest",
+    "thread-promises": "latest"
   },
   "devDependencies": {
     "@types/jest": "26.0.24",
