--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "thread-promises": "latest"
   },
   "devDependencies": {
-    "@types/jest": "26.0.24",
+    "@types/jest": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
@@ -64,9 +64,9 @@
     "eslint-plugin-filenames": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-prettier": "latest",
-    "jest": "26.6.2",
+    "jest": "latest",
     "prettier": "latest",
-    "ts-jest": "26.5.6",
+    "ts-jest": "latest",
     "typescript": "latest"
   }
 }
