--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -7,6 +7,7 @@ on:
       - "*/*" # matches every branch containing a single '/'
   push:
     branches:
+      - master
       - main
 
 jobs:
@@ -55,7 +56,7 @@ jobs:
           MONGO_HOST: mongo
           MONGO_PORT: ${{ job.services.mongo.ports[27017] }}
       - name: ZIP TO ARTIFACT
-        if: ${{ github.ref_name == 'main' }}
+        if: ${{ github.ref_name == 'main' || github.ref_name == 'master' }}
         uses: judahh/zipToArtifact@main
         with:
           production: true
